# Telegram_bot_python

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  MIGRATION_GUIDE.md  README.MD  bot.py  config.json.example  database.py  docker-compose.app-only.yml  docker-compose.yml  logging.ini  logging_test.ini  models.py  pyproject.toml  requirements.txt  run.py  validators.py
SQL_queries/: Add_indexes.sql  Grant_permissions_to_user.sql  Permissions to db_for_bot.sql
app/: main.py
app/api/v1/: admin.py  handlers.py  webhook.py
app/core/: config.py  dependencies.py  encryption.py  permissions.py  validators.py
app/database/: repository.py  session.py
app/schemas/: item.py
app/services/: bot_service.py  vpn_client.py
app/static/: admin.css
app/templates/: base.html  dashboard.html  items.html  login.html  settings.html  users.html  vpn.html
bot/: bot.py
database/: database.py  models.py
docs/: DEPLOY_MANUAL.md
tests/: conftest.py  logging.ini  test_admin.py  test_app_bot_service.py  test_app_repository.py  test_app_user_repository.py  test_bot.py  test_database.py  test_encryption.py  test_handlers.py  test_my_bot.py  test_permissions.py  test_schemas.py  test_test.py  test_validators.py  test_vpn.py
tests/playwright/: conftest.py
tests/playwright/api/: test_admin.py  test_health.py
tests/playwright/pages/: base_page.py  dashboard_page.py  login_page.py
tests/playwright/smoke/: test_smoke.py
validators/: validators.py
