[tool.poetry]
name = "telegram-bot"
version = "0.2.1"
description = ""
authors = ["silverdusk <kirill@dr.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-telegram-bot = "^20.7"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
python-multipart = "^0.0.22"
pytz = "^2024.1"
cryptography = "^46.0"
jinja2 = ">=3.1.6"
PyJWT = ">=2.11.0"
pytest = "^8.1.1"
allure-pytest = "^2.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[tool.poetry.group.playwright.dependencies]
pytest-playwright = "^0.5.0"
playwright = "^1.40.0"

[tool.pytest.ini_options]
# Legacy tests and playwright tests are excluded from the default run.
# Run playwright tests explicitly: pytest tests/playwright/ -v
addopts = "--ignore=tests/test_bot.py --ignore=tests/test_database.py --ignore=tests/playwright"
# Base URL used by pytest-playwright fixtures (override via --base-url CLI option)
base_url = "http://localhost:8000"
markers = [
    "smoke: quick sanity checks — run on every deploy (fast, no DB required)",
    "regression: full API regression suite — requires a running app instance",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
